Revert "move assets to resources"
This reverts commit 98ecba04c6f6b4723511e783ea675fb1a7ac7fa8.